--- a/css/style.css
+++ b/css/style.css
@@ -1219,11 +1219,12 @@ span.border.two:after {
     -moz-background-size: cover;
     -o-background-size: cover;
     -ms-background-size: cover;
-    min-height: 500px;
+    min-height: 900px;
     /* min-width: 100%; */
     padding:5em 0 0em 0;
     background-attachment: fixed;
     background-size: 100% auto;
+	background-color: #e8e8e8;
 }
 .footer_top ul li{
 	font-size:22px;
